--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,19 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=CHANGE_ME
 ###< symfony/framework-bundle #
+
+###> symfony/mercure-bundle ###
+MERCURE_PUBLIC_URL=http://localhost:3005/.well-known/mercure
+###< symfony/mercure-bundle ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+###< lexik/jwt-authentication-bundle ###
