--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "firebase/php-jwt": "^6.11",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-github": "^3.1",
         "league/oauth2-google": "^4.0",
