--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -22,8 +22,9 @@ services:
 
     App\Service\OAuth\GithubOAuthService:
         tags: ['app.oauth_service']
-
-    # ✅ Mercure JWT Encoder
+    # OAuth 
+    
+    # Mercure JWT Encoder
     App\Service\MercureJwtEncoder:
         arguments:
             $secret: '%env(MERCURE_JWT_SECRET_PUBLIC)%'
@@ -31,3 +32,9 @@ services:
     App\Service\MercureSubscriberTokenGenerator:
         arguments:
             $secret: '%env(MERCURE_JWT_SECRET_PUBLIC)%'
+    # Mercure JWT Encoder
+
+    acme_api.event.authentication_success_listener:
+        class: App\EventListener\AuthenticationSuccessListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccessResponse }
