--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -8,6 +8,6 @@ nelmio_cors:
 
   paths:
     '^/api/':
-      allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app/']
+      allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app']
       allow_headers: ['Content-Type', 'Authorization']
       allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
