--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,6 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=CHANGE_ME
 ###< symfony/framework-bundle #
 
 ###> symfony/messenger ###
@@ -12,4 +11,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-###< lexik/jwt-authentication-bundle ###
+###< lexik/jwt-authentication-bundle ##
