--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -2,12 +2,12 @@ nelmio_cors:
   defaults:
     allow_credentials: true
     allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app']
-    allow_headers: ['Content-Type', 'Authorization']
+    allow_headers: ['Authorization', 'Content-Type']
     allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
     max_age: 3600
 
   paths:
     '^/api/':
-      allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app/']
-      allow_headers: ['Content-Type', 'Authorization']
+      allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app']
+      allow_headers: ['Authorization', 'Content-Type']
       allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
