--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "event-source-polyfill": "^1.0.31",
     "jsonwebtoken": "^9.0.2",
     "ky": "^1.8.1",
     "lucide-react": "^0.487.0",
