--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -1,13 +1,23 @@
 nelmio_cors:
   defaults:
     allow_credentials: true
-    allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app']
-    allow_headers: ['Authorization', 'Content-Type']
-    allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+    allow_origin:
+      [
+        "http://localhost:3000",
+        "https://pomodoro-app-three-lyart.vercel.app"
+      ]
+    allow_headers: ["Authorization", "Content-Type", "Origin"]
+    expose_headers: ["Authorization"]
+    allow_methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     max_age: 3600
 
   paths:
-    '^/api/':
-      allow_origin: ['http://localhost:3000','https://pomodoro-app-three-lyart.vercel.app']
-      allow_headers: ['Authorization', 'Content-Type']
-      allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+    "^/api/":
+      allow_origin:
+        [
+          "http://localhost:3000",
+          "https://pomodoro-app-three-lyart.vercel.app"
+        ]
+      allow_headers: ["Authorization", "Content-Type", "Origin"]
+      expose_headers: ["Authorization"]
+      allow_methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
