--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "^4.5.7",
     "expo": "~53.0.9",
+    "expo-auth-session": "~6.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
     "ky": "^1.8.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "expo-auth-session": "~6.1.5",
-    "expo-web-browser": "~14.1.6"
+    "react-native-sse": "^1.2.1",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
