--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "ky": "^1.8.1",
+    "lucide-react-native": "^0.513.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
