--- a/mobile/app.json
+++ b/mobile/app.json
@@ -6,7 +6,7 @@
     "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/pomo.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/pomo.png",
