--- a/api/composer.json
+++ b/api/composer.json
@@ -28,6 +28,7 @@
         "symfony/expression-language": "7.2.*",
         "symfony/flex": "^2.5",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/mailer": "7.2.*",
         "symfony/mercure-bundle": "^0.3.9",
         "symfony/messenger": "7.2.*",
         "symfony/property-access": "7.2.*",
